Updated the interceptor rules. Removed some logging that was very verbose. Small fixes. Did a larte portion of the UI including the documentation.
git-svn-id: http://ikube.googlecode.com/svn/trunk@397 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/war/src/main/webapp/WEB-INF/jsp/results.jspf
+++ b/code/war/src/main/webapp/WEB-INF/jsp/results.jspf
@@ -16,7 +16,7 @@
 			<!--
 				This is the search tag. The tag will extract the parameters from the request and access the SearchServlet. In the above
 				searchForm the parameters specified are name, fragment, searchField and searchString. These parameters will be passed to
-				the SearchServlet. The result will be returned in a serialised list of maps.  This list will be de-serialised and added to the
+				the SearchServlet. The result will be returned in a serialized list of maps.  This list will be de-serialized and added to the
 				session where they are accessible to the page via standard JSTL tags and some expression language.
 
 				The searchUrl attribute in the search tag is where the search application is deployed.
