--- a/code/war/src/main/webapp/style/style-white.css
+++ b/code/war/src/main/webapp/style/style-white.css
@@ -16,9 +16,12 @@ table {
 	text-align: left;
 }
 
+th {
+	background-color: #f2eded;
+}
+
 td {
 	vertical-align: top;
-	border: 0px solid black;
 }
 
 h1, h2, h3 {
@@ -202,7 +205,7 @@ hr { display: none; }
 	# float: left;
 }
 #search-text {
-	width: 176px;
+	width: 150px;
 	padding: 7px 0px 0px 10px;
 	background: #ffffff;
 	border: none;
