--- a/code/war/src/main/webapp/style/style-white.css
+++ b/code/war/src/main/webapp/style/style-white.css
@@ -65,12 +65,10 @@ a img {
 }
 
 img.left {
-	# float: left;
 	margin: 7px 30px 0 0;
 }
 
 img.right {
-	# float: right;
 	margin: 7px 0 0 30px;
 }
 
@@ -80,7 +78,6 @@ hr { display: none; }
 }
 
 .list1 li {
-	# float: left;
 	line-height: normal;
 }
 
@@ -160,7 +157,7 @@ hr { display: none; }
 
 /* Menu */
 #menu {
-	# float: right;
+	float: right;
 	height: 173px;
 }
 #menu ul {
@@ -169,7 +166,6 @@ hr { display: none; }
 	list-style: none;
 }
 #menu li {
-	# float: left;
 	padding-bottom: 15px;
 }
 #menu a {
@@ -202,7 +198,7 @@ hr { display: none; }
 	/* padding-top : 42px; */
 }
 #search input {
-	# float: left;
+	float: left;
 }
 #search-text {
 	width: 150px;
@@ -229,7 +225,7 @@ hr { display: none; }
 	border : solid black 1px;
 }
 #search-submit {
-	# float: left;
+	float: left;
 	width: 25px;
 	border: none;
 	color: #636363;
@@ -238,7 +234,7 @@ hr { display: none; }
 	border : solid black 1px;
 }
 #search-submit-plain {
-	# float: right;
+	float: right;
 	width: 25px;
 	border: none;
 	color: #636363;
@@ -256,7 +252,6 @@ hr { display: none; }
 
 /* Content */
 #content {
-	# float: left;
 	width: 750px;
 }
 #content .top-content {
@@ -314,7 +309,7 @@ hr { display: none; }
 	padding: 0px;
 }
 .post .date {
-	# float: right;
+	float: right;
 	margin-top: -30px;
 	padding-right: 20px;
 	font-weight: normal;
@@ -348,7 +343,7 @@ hr { display: none; }
 
 /* Sidebar */
 #sidebar {
-	# float: right;
+	float: right;
 	width: 220px;
 }
 #sidebar ul {
