Added paging to the results page. Updated the web services. Refined the cluster action rules. Modified the spelling tag.
git-svn-id: http://ikube.googlecode.com/svn/trunk@472 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/war/src/main/webapp/style/style-white.css
+++ b/code/war/src/main/webapp/style/style-white.css
@@ -198,7 +198,7 @@ hr { display: none; }
 	/* padding-top : 42px; */
 }
 #search input {
-	float: left;
+	/* float: left; */
 }
 #search-text {
 	width: 150px;
@@ -225,7 +225,7 @@ hr { display: none; }
 	border : solid black 1px;
 }
 #search-submit {
-	float: left;
+	/* float: left; */
 	width: 25px;
 	border: none;
 	color: #636363;
