Updates of the JavaDoc and touch up of the logging for the 2.0.0 release.
git-svn-id: http://ikube.googlecode.com/svn/trunk@528 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/war/src/main/webapp/style/style-white.css
+++ b/code/war/src/main/webapp/style/style-white.css
@@ -9,6 +9,7 @@ body {
 }
 
 table {
+	/* border: 1px solid black; */
 	line-height: 13px;
 	font-family: Tahoma, "Trebuchet MS", Arial, Helvetica, sans-serif;
 	font-size: 11px;
@@ -343,7 +344,7 @@ hr { display: none; }
 
 /* Sidebar */
 #sidebar {
-	float: right;
+	float: left;
 	width: 220px;
 }
 #sidebar ul {
