Removed un-used classes and configuration and did a little re-factoring.
git-svn-id: http://ikube.googlecode.com/svn/trunk@756 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/war/src/main/webapp/style/style-white.css
+++ b/code/war/src/main/webapp/style/style-white.css
@@ -236,8 +236,8 @@ hr { display: none; }
 	border : solid black 1px;
 }
 #search-submit-plain {
-	float: right;
-	width: 25px;
+	/* float: right; */
+	width: 50px;
 	border: none;
 	color: #636363;
 	height : 20px;
