Updated the documentation. Added some tests for the Wiki language indexer handler. Cleaned the database controller. Removed un-used code and files.
git-svn-id: http://ikube.googlecode.com/svn/trunk@894 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/war/src/main/webapp/style/style-white.css
+++ b/code/war/src/main/webapp/style/style-white.css
@@ -97,13 +97,13 @@ hr { display: none; }
 
 /* Header */
 #header-wrapper {
-	width: 920px;
+	width: 100%;
 	height: 173px;
 	margin: 0px auto;
 	padding: 0px;
 }
 #header {
-	width: 920px;
+	width: 100%;
 	height: 80px;
 	margin: 0px auto;
 	text-decoration : none;
@@ -260,14 +260,14 @@ hr { display: none; }
 
 /* Page */
 #page {
-	width: 840px;
+	width: 100%;
 	margin: 0px auto;
 	padding: 40px 40px 0px 40px;
 }
 
 /* Content */
 #content {
-	width: 750px;
+	width: 100%;
 }
 #content .top-content {
 	height: 50px;
@@ -443,7 +443,7 @@ hr { display: none; }
 
 /* Footer */
 #footer {
-	width: 920px;
+	width: 100%;
 	height: 100px;
 	margin: 0px auto;
 	padding: 0px;
