Renamed the configuration folder, cleaned some tests and the project build files.
git-svn-id: http://ikube.googlecode.com/svn/trunk@960 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/war/.settings/org.eclipse.wst.common.component
+++ b/code/war/.settings/org.eclipse.wst.common.component
@@ -8,7 +8,7 @@
         <dependent-module archiveName="ikube-core-3.1.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/ikube-core/ikube-core">
             <dependency-type>uses</dependency-type>
         </dependent-module>
-        <property name="context-root" value="ikube-war"/>
         <property name="java-output-path" value="/ikube-war/target/classes"/>
+        <property name="context-root" value="ikube"/>
     </wb-module>
 </project-modules>
