Updated the jsps to call by Angular, and a little re-factoring, and some ui improvements like table sorting.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1053 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/war/src/main/webapp/style/ikube.css
+++ b/code/war/src/main/webapp/style/ikube.css
@@ -76,38 +76,26 @@ a {
 	text-decoration: none;
 }
 
-table {
-	margin : 0;
-	padding: 0;
-	border : 0; // 1px solid black
+table, td {
+	margin : 0px;
+	padding: 2px;
+	border : 0;
+	border-collapse: collapse;
 }
 
-table td,table th {
-	margin : 0;
-	padding: 0;
-	border : 0; // 1px solid black
+table th {
+	margin : 0px;
+	padding: 3px;
+	border : 1px solid #aaaaaa;
+	border-collapse: collapse;
 }
 
-table thead {
+/* table thead {
 	font: normal 12px Arial, Helvetica Neue, Helvetica, sans-serif;
 	text-shadow: 0 0px 0 white;
 	color: #999;
 	margin : 0;
 	padding: 0;
-	border : 0; // 1px solid black
-}
+	border : 0;
+} */
 
-table th {
-	text-align: left;
-	border-bottom: 0px solid #fff;
-	margin : 0;
-	padding: 0;
-	border : 0; // 1px solid black
-}
-
-table td {
-	font: 12px Tahoma, Helvetica, sans-serif, Arial;
-	margin : 0;
-	padding: 0;
-	border : 0; // 1px solid black
-}
