Fixed the internet handler and added the search logic for the site.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1138 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/site/src/main/webapp/style/style.css
+++ b/code/site/src/main/webapp/style/style.css
@@ -33,6 +33,10 @@ body, table, tr, td, th, input, textarea {
 	border-collapse: collapse; */
 }
 
+th {
+	text-align: left;
+}
+
 hr {
 	height: 0; 
 	line-height: 0; 
