--- a/code/war/.settings/org.eclipse.wst.common.component
+++ b/code/war/.settings/org.eclipse.wst.common.component
@@ -4,6 +4,9 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+        <dependent-module archiveName="ikube-core-4.2.2-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/ikube-core/ikube-core">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="java-output-path" value="/ikube-war/target/classes"/>
         <property name="context-root" value="ikube"/>
     </wb-module>
