Did some re-factoring and cleaning. Also implemented the auto complete.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1215 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/site/src/main/webapp/style/style.css
+++ b/code/site/src/main/webapp/style/style.css
@@ -320,7 +320,7 @@ ul#menu li.right {
 /* -------------------------------- Form styles -------------------------------- */
 
 input {
-	width: 50%;
+	/* width: 50%; */
 	color: #999;
 	background: #FFF;
 	border: 1px solid #CCC;
