Fiddling around again.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1217 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/site/src/main/webapp/style/style.css
+++ b/code/site/src/main/webapp/style/style.css
@@ -92,7 +92,7 @@ blockquote {
 
 body {
 	text-align: center; 
-	background: #FFF url("images/bg-main.jpg") no-repeat center top;
+	/* background: #FFF url("images/bg-main.jpg") no-repeat center top; */
 }
 
 div#page {
