Re-styling the gui and adding some functionality.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1237 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/war/src/main/webapp/style/ikube.css
+++ b/code/war/src/main/webapp/style/ikube.css
@@ -88,6 +88,7 @@ table th {
 	padding: 2px;
 	border : 1px solid #aaaaaa;
 	border-collapse: collapse;
+	text-align: left;
 }
 
 .active {
@@ -107,4 +108,8 @@ table th {
 .bordered {
 	border : 1px solid #aaaaaa;
 	border-collapse: collapse;
+}
+textarea {
+    width:98%;
+    font-size: 12px;
 }
