--- a/code/war/.settings/org.eclipse.wst.common.component
+++ b/code/war/.settings/org.eclipse.wst.common.component
@@ -7,6 +7,9 @@
         <dependent-module archiveName="ikube-core-4.3.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/ikube-core/ikube-core">
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="ikube-com-4.3.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/ikube-com/ikube-com">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="java-output-path" value="/ikube-war/target/classes"/>
         <property name="context-root" value="ikube"/>
     </wb-module>
