--- a/code/site/src/main/webapp/docs/application.css
+++ b/code/site/src/main/webapp/docs/application.css
@@ -184,6 +184,8 @@ table {
 td,
 th {
     padding: 0;
+    vertical-align: top;
+    text-align: left;
 }
 @media print {
     * {
@@ -253,7 +255,7 @@ th {
     }
     .table-bordered th,
     .table-bordered td {
-        border: 1px solid #ddd !important;
+        border: 3px solid #ddd !important;
     }
 }
 * {
